--- a/package.json
+++ b/package.json
@@ -59,11 +59,13 @@
     "electron-squirrel-startup": "^1.0.1",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.542.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.5",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.5",
