--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,10 +13,13 @@ env:
 jobs:
   build-on-win:
     runs-on: windows-latest
-    container: node:22
     steps:
       - name: Checkout to repo
         uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v5
+        with:
+          node-version: "22"
       - name: Install dependencies
         run: yarn
       - name: Build and publish
