--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "beye",
   "productName": "beye",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "My Electron application description",
   "main": ".vite/build/main.js",
   "scripts": {
@@ -63,6 +63,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.542.0",
+    "monaco-editor": "^0.52.2",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
